--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <section id="commands" class="commands">
             <table class="commands-table">
-                <h2>Bot Commands (13)</h2>
+                <h2>Bot Commands (12)</h2>
                 <br /><br />
                 <thead>
                     <tr>
@@ -75,6 +75,78 @@
                         <td>+invite</td>
                         <td>None</td>
                         <td>+invite</td>
+                    </tr>
+                    <tr>
+                        <td>4.</td>
+                        <td>Lavalink</td>
+                        <td>Displays the bot's lavalink stats</td>
+                        <td>+lavalink</td>
+                        <td>None</td>
+                        <td>+lavalink</td>
+                    </tr>
+                    <tr>
+                        <td>5.</td>
+                        <td>Legal</td>
+                        <td>Privacy policy</td>
+                        <td>+legal</td>
+                        <td>None</td>
+                        <td>+legal</td>
+                    </tr>
+                    <tr>
+                        <td>6.</td>
+                        <td>Ping</td>
+                        <td>Sends a Bot latency</td>
+                        <td>+ping</td>
+                        <td>None</td>
+                        <td>+ping</td>
+                    </tr>
+                    <tr>
+                        <td>7.</td>
+                        <td>Review</td>
+                        <td>Review link</td>
+                        <td>+review</td>
+                        <td>None</td>
+                        <td>+review</td>
+                    </tr>
+                    <tr>
+                        <td>8.</td>
+                        <td>Role</td>
+                        <td>Gives you the voted role</td>
+                        <td>+role</td>
+                        <td>None</td>
+                        <td>+role</td>
+                    </tr>
+                    <tr>
+                        <td>9.</td>
+                        <td>Shards</td>
+                        <td>Displays the bot's shards</td>
+                        <td>+shards</td>
+                        <td>None</td>
+                        <td>+shards</td>
+                    </tr>
+                    <tr>
+                        <td>10.</td>
+                        <td>Stats</td>
+                        <td>Displays the bot's Stats</td>
+                        <td>+stats</td>
+                        <td>None</td>
+                        <td>+stats</td>
+                    </tr>
+                    <tr>
+                        <td>11.</td>
+                        <td>Support</td>
+                        <td>Sends the support server for the bot</td>
+                        <td>+support</td>
+                        <td>None</td>
+                        <td>+support</td>
+                    </tr>
+                    <tr>
+                        <td>12.</td>
+                        <td>Vote</td>
+                        <td>Send vote link</td>
+                        <td>+vote</td>
+                        <td>None</td>
+                        <td>+vote</td>
                     </tr>
                 </tbody>
             </table>
@@ -183,6 +255,139 @@
                         <td>+play &LeftAngleBracket;search query&RightAngleBracket;</td>
                         <td>None</td>
                         <td>+play Blueeyes</td>
+                    </tr>
+                </tbody>
+            </table>
+            <br /><br />
+
+            <!--Settings Commands Table-->
+
+            <table class="commands-table">
+                <h2>Settings Commands (6)</h2>
+                <br /><br />
+                <thead>
+                    <tr>
+                        <th>Sl.no</th>
+                        <th>Command</th>
+                        <th>Description</th>
+                        <th>Usage</th>
+                        <th>User Permissions</th>
+                        <th>Example</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1.</td>
+                        <td>247</td>
+                        <td>On & Off the 24/7 Music play </td>
+                        <td>+247</td>
+                        <td>Premium</td>
+                        <td>+247</td>
+                    </tr>
+                    <tr>
+                        <td>2.</td>
+                        <td>Bio</td>
+                        <td>Sets your bio</td>
+                        <td>+bio &LeftAngleBracket;data&RightAngleBracket;</td>
+                        <td>None</td>
+                        <td>+bio Hello Friends, I am Bot Developer</td>
+                    </tr>
+                    <tr>
+                        <td>3.</td>
+                        <td>Ignore</td>
+                        <td>The bot will stop responding to commands from the channel</td>
+                        <td>+ignore &LeftAngleBracket;channel&RightAngleBracket;</td>
+                        <td>Premium</td>
+                        <td>+ignore #spam</td>
+                    </tr>
+                    <tr>
+                        <td>4.</td>
+                        <td>Listen</td>
+                        <td>The bot will resume responding to commands from the channel</td>
+                        <td>+listen &LeftAngleBracket;channel&RightAngleBracket;</td>
+                        <td>Premium</td>
+                        <td>+listen #spam</td>
+                    </tr>
+                    <tr>
+                        <td>5.</td>
+                        <td>Prefix</td>
+                        <td>Set the prefix for the server</td>
+                        <td>+prefix &LeftAngleBracket;new prefix&RightAngleBracket;</td>
+                        <td>Manage Guild</td>
+                        <td>+prefix #</td>
+                    </tr>
+                    <tr>
+                        <td>6.</td>
+                        <td>Profile</td>
+                        <td>Displays the user's profile</td>
+                        <td>+profile</td>
+                        <td>None</td>
+                        <td>+profile &LeftAngleBracket;user&RightAngleBracket;</td>
+                    </tr>
+                </tbody>
+            </table>
+            <br /><br />
+            <table class="commands-table">
+                <h2>Source Commands (6)</h2>
+                <br /><br />
+                <thead>
+                    <tr>
+                        <th>Sl.no</th>
+                        <th>Command</th>
+                        <th>Description</th>
+                        <th>Usage</th>
+                        <th>User Permissions</th>
+                        <th>Example</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1.</td>
+                        <td>Bandcamp</td>
+                        <td>Plays a song from bandcamp</td>
+                        <td>+bandcamp &LeftAngleBracket;song link&RightAngleBracket;</td>
+                        <td>Premium</td>
+                        <td>+bandcamp https://bandcamp.com</td>
+                    </tr>
+                    <tr>
+                        <td>2.</td>
+                        <td>Mixer</td>
+                        <td>Plays streams from mixer</td>
+                        <td>+mixer &LeftAngleBracket;song link&RightAngleBracket;</td>
+                        <td>Premium</td>
+                        <td>+mixer https://mixer.com</td>
+                    </tr>
+                    <tr>
+                        <td>3.</td>
+                        <td>Soundcloud</td>
+                        <td>Plays a song from soundcloud</td>
+                        <td>+soundcloud &LeftAngleBracket;song link&RightAngleBracket;</td>
+                        <td>None</td>
+                        <td>+soundcloud https://soundcloud.com</td>
+                    </tr>
+                    <tr>
+                        <td>4.</td>
+                        <td>Spotify</td>
+                        <td>Plays a spotify track</td>
+                        <td>+spotify &LeftAngleBracket;spotify link&RightAngleBracket;</td>
+                        <td>Pro</td>
+                        <td>+spotify https://spotify.com</td>
+                    </tr>
+                    <tr>
+                        <td>5.</td>
+                        <td>Twitch</td>
+                        <td>Plays a stream from Twitch</td>
+                        <td>+twitch &LeftAngleBracket;stream link&RightAngleBracket;</td>
+                        <td>Pro</td>
+                        <td>+Twitch https://twitch.com</td>
+                    </tr>
+                    <tr>
+                        <td>6.</td>
+                        <td>Youtube</td>
+                        <td>Plays a song from youtube</td>
+                        <td>+youtube &LeftAngleBracket;song query&RightAngleBracket;</td>
+                        <td>None</td>
+                        <td>+youtube https://www.youtube.com</td>
                     </tr>
                 </tbody>
             </table>
